force-app/main/default/objects/Teacher__c/fields/Additional_Subjects__c.field-meta.xml
<CustomField>
    <fullName>Additional_Subjects__c</fullName>
    <label>Additional Subjects</label>
    <length>30</length>
    <type>Text</type>
</CustomField>