force-app/main/default/objects/Teacher__c/fields/Date_Of_Releaving__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Releaving__c</fullName>
    <label>Date Of Releaving</label>
    <type>Date</type>
</CustomField>