force-app/main/default/objects/Teacher__c/fields/Full_Gross_Salary__c.field-meta.xml
<CustomField>
    <fullName>Full_Gross_Salary__c</fullName>
    <label>Full Gross Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>