force-app/main/default/objects/Teacher__c/fields/Type_Of_Employment__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Employment__c</fullName>
    <label>Type Of Employment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permenant</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>